# Summit_ws

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/summit_navigation/share/summit_navigation/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_list
src/assets/: Table.stl
src/isaac_ros_navigation_goal/assets/: goals.txt
src/isaac_ros_navigation_goal/isaac_ros_navigation_goal/: set_goal.py
src/isaac_ros_navigation_goal/launch/: isaac_ros_navigation_goal.launch.py
src/robot_description/: summit_xl_navigation.usd  summit_xl_navigation.usda
src/robot_description/Table/: Table.usd
src/robot_description/lab table/: lab table.usd
src/robot_description/urdf/: summit_xl.urdf  summit_xl.xacro  summit_xl_new.urdf  summit_xl_new.xacro  summit_xl_new_two.urdf  summit_xl_new_two.xacro  xacro_to_urdf.sh
src/robot_description/urdf/summit_xl/: summit_xl.usd
src/robot_description/urdf/summit_xl_new/: summit_xl_new.usd
src/robot_description/urdf/summit_xl_new_two/: summit_xl_new_two.usd
src/summit_navigation/: CMakeLists.txt  package.xml
src/summit_navigation/launch/: summit_franka_navigation.launch.py  summit_navigation.launch.py
src/summit_navigation/maps/: lab_map.yaml  summit_map.yaml
src/summit_navigation/params/: summit_franka_navigation_params.yaml  summit_navigation_params.yaml
src/summit_navigation/rviz2/: summit_franka_navigation.rviz  summit_navigation.rviz  summit_navigation3.rviz
(+3 files in other folders)
